@@ -25,17 +25,22 @@ class Form(object):
             self._fields.append((name, field))
             setattr(self, name, field)
 
-            field.process_data(field._default, has_formdata)
-            if has_formdata and form_name in formdata:
-                try:
-                    data = formdata.getlist(form_name)
-                except AttributeError:
-                    data = formdata.getall(form_name)
-                field.process_formdata(data)
-            elif hasattr(obj, name):
-                field.process_data(getattr(obj, name), has_formdata)
+            if hasattr(obj, name):
+                field.process_data(getattr(obj, name))
             elif name in kwargs:
-                field.process_data(kwargs[name], has_formdata)
+                field.process_data(kwargs[name])
+            else:
+                field.process_data(field._default)
+
+            if has_formdata:
+                if form_name in formdata:
+                    try:
+                        data = formdata.getlist(form_name)
+                    except AttributeError:
+                        data = formdata.getall(form_name)
+                    field.process_formdata(data)
+                else:
+                    field.process_formdata([])
 
     def __new__(cls, *args, **kw):
         """
